<resources>

    <string name="action_settings">Settings</string>
    <string name="btn_1">버튼1</string>
    <string name="btn_2">버튼2</string>
    <string name="btn_3">버튼3</string>
    <string name="btn_4">버튼4</string>
    <string name="clkbtn_1">버튼1 클릭했네?</string>
    <string name="clkbtn_2">버튼2 클릭했네?</string>
    <string name="clkbtn_3">버튼3 클릭했네?</string>
    <string name="clkbtn_4">버튼4 클릭했네?</string>

    <string name="calcul">더하기\n곱하기</string>
    <string name="result">계산</string>
    <string name="basic">숫자입력</string>
    <string name="plus">합이 나옵니다.</string>
    <string name="mul">곱이 나옵니다.</string>

    <string name="star">별찍기!</string>
    <string name="btn_star">짜~짜잔!</string>

    <string name="insertCoin">돈을 넣어 주세요.</string>
    <string name="btnCoin">넣기</string>
    <string name="cola">콜라\n100</string>
    <string name="cider">사이다\n200</string>
    <string name="orance">오란씨\n300</string>
    <string name="milkiss">밀키스\n400</string>
    <string name="macol">맥콜\n500</string>
    <string name="pocari">포카리\n600</string>
    <string name="balance">잔돈</string>
    <string name="add">광고주를 모십니다~\n저비용 고효율 광고!</string>

    <string name="Join_name">\n이름 : </string>
    <string name="Join_age">\n나이 : </string>
    <string name="Join_address">\n주소 : </string>
    <string name="Join_ID">\n아디 : </string>
    <string name="Join_PW">\n비번 : </string>
    <string name="Join_check">확인</string>
</resources>
