<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exam2Activity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/getNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/basic"/>

        <Button
            android:id="@+id/starBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_star"/>
    </LinearLayout>


    <TextView
        android:id="@+id/showStar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/star"
        android:background="#fde400"
        android:textSize="30sp"/>

</LinearLayout>