<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exam3Activity"
    android:orientation="vertical"
    >


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" >-->

        <!--<EditText-->
            <!--android:id="@+id/insertCoin"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="3"-->
            <!--android:hint="@string/insertCoin" />-->

        <!--<Button-->
            <!--android:id="@+id/btnCoin1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="2"-->
            <!--android:textSize="20dp"-->
            <!--android:text="@string/btnCoin" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_marginTop="70dp">-->

        <!--<Button-->
            <!--android:id="@+id/cola"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#fd0015"-->
            <!--android:text="@string/cola" />-->

        <!--<Button-->
            <!--android:id="@+id/cider"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#15fd00"-->
            <!--android:text="@string/cider" />-->

        <!--<Button-->
            <!--android:id="@+id/orance"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#fd7200"-->
            <!--android:text="@string/orance" />-->

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_marginTop="20dp">-->

        <!--<Button-->
            <!--android:id="@+id/milkiss"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#00f7f7"-->
            <!--android:text="@string/milkiss" />-->

        <!--<Button-->
            <!--android:id="@+id/mccol"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#d10800fd"-->
            <!--android:text="@string/macol" />-->

        <!--<Button-->
            <!--android:id="@+id/pocari"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textSize="35dp"-->
            <!--android:background="#71b4ea"-->
            <!--android:text="@string/pocari" />-->

    <!--</LinearLayout>-->

    <!--<Button-->
        <!--android:id="@+id/btnCoin2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="70dp"-->
        <!--android:textSize="20dp"-->
        <!--android:text="@string/balance"/>-->
    <!--<TextView-->
        <!--android:id="@+id/add"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="30dp"-->
        <!--android:text="@string/add"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/insertCoin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:onClick="compactClk"
            android:hint="@string/insertCoin" />

        <Button
            android:id="@+id/btnCoin1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20dp"
            android:onClick="compactClk"
            android:text="@string/btnCoin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/cola"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#fd0015"
            android:onClick="compactClk"
            android:text="@string/cola" />

        <Button
            android:id="@+id/cider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#15fd00"
            android:onClick="compactClk"
            android:text="@string/cider" />

        <Button
            android:id="@+id/orance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#fd7200"
            android:onClick="compactClk"
            android:text="@string/orance" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/milkiss"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#00f7f7"
            android:onClick="compactClk"
            android:text="@string/milkiss" />

        <Button
            android:id="@+id/mccol"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#d10800fd"
            android:onClick="compactClk"
            android:text="@string/macol" />

        <Button
            android:id="@+id/pocari"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="35dp"
            android:background="#71b4ea"
            android:onClick="compactClk"
            android:text="@string/pocari" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCoin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="20dp"
        android:onClick="compactClk"
        android:text="@string/balance"/>
    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/add"/>

</LinearLayout>